# zephyr-xrun

./: CMakeLists.txt  Kconfig  LICENSE  README.md
include/: storage.h  xrun.h
src/: storage.c  xrun.c  xrun_cmds.c
tests/xrun/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/xrun/include/: domain.h  xen_dom_mgmt.h  xl_parser.h
tests/xrun/src/: main.c  mock-parser.c  mock-storage.c  mock-xen-dom-mgmt.c
zephyr/: module.yml
